# letmein

./: .gitignore  CONFIGURATION.md  Cargo.toml  Dockerfile.test  Dockerfile.test.new  INSTALL.md  PROTOCOL.md  README.md  SECURITY.md  android-build.sh  build-android.sh  build.cmd  build.sh  create-user.sh  debug-script.sh  debug-test.sh  docker-test.sh  install-android.sh  install-client.sh  install-server.sh  install.sh  nftables.conf  restart.sh  sign-android.sh
.github/workflows/: ci.yml
android/res/drawable-v24/: ic_launcher_foreground.xml
assets/: makeicons.sh  svg2vd.py
doc/: CONFIGURATION.md  DISTRO_PACKAGING.md  PROTOCOL.md  nftables.conf
letmein/: Cargo.toml  build.rs  letmein.conf
letmein-android/: Cargo.toml
letmein-android-app/: settings.gradle.kts
letmein-android-app/app/: build.gradle.kts
letmein-android-app/app/src/androidTest/java/ch/bues/letmein/: ExampleInstrumentedTest.kt
letmein-android-app/app/src/main/: AndroidManifest.xml
letmein-android-app/app/src/main/java/ch/bues/letmein/: Letmein.kt  MainActivity.kt
letmein-android-app/app/src/main/java/ch/bues/letmein/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
letmein-android-app/app/src/main/java/ch/bues/letmein/ui/home/: HomeFragment.kt  HomeViewModel.kt
letmein-android-app/app/src/main/java/ch/bues/letmein/ui/slideshow/: SlideshowFragment.kt  SlideshowViewModel.kt
letmein-android-app/app/src/main/res/layout/: app_bar_main.xml
letmein-android-app/app/src/main/res/navigation/: mobile_navigation.xml
letmein-android-app/app/src/main/res/values/: strings.xml  themes.xml
letmein-android-app/app/src/main/res/values-night/: themes.xml
letmein-android-app/app/src/test/java/ch/bues/letmein/: ExampleUnitTest.kt
letmein-android-app/gradle/: libs.versions.toml
letmein-android-app/gradle/wrapper/: gradle-wrapper.properties
letmein-android/src/: lib.rs
letmein-conf/: Cargo.toml
letmein-conf/src/: ini.rs  ini_test.rs  lib.rs  parse.rs  parse_items.rs
letmein-fwproto/: Cargo.toml
letmein-fwproto/src/: lib.rs
letmein-gui/: Cargo.toml  Dioxus.toml
letmein-gui/src/: config.rs  knock.rs  lib.rs  main.rs  settings.rs  style.css  ui.rs
letmein-gui/src/ui/: main_screen.rs  servers_screen.rs  settings_screen.rs  top_bar.rs
letmein-proto/: Cargo.toml  README.md
letmein-proto/src/: lib.rs  socket.rs
letmein-seccomp/: Cargo.toml  build.rs
letmein-seccomp/src/: lib.rs
letmein-systemd/: Cargo.toml
letmein-systemd/src/: lib.rs
letmein/src/: client.rs  command.rs  lib.rs  main.rs  resolver.rs  seccomp.rs
letmein/src/command/: close.rs  genkey.rs  knock.rs
letmein/src/resolver/: dns_lookup.rs  hickory.rs
letmeind/: Cargo.toml  build.rs  letmeind.conf  letmeind.service  letmeind.socket
letmeind/src/: auth_rate_limiter.rs  firewall.rs  firewall_client.rs  ip_limiter.rs  main.rs  monitor.rs  processor.rs  protocol.rs  seccomp.rs  server.rs  systemd.rs
letmeind/src/firewall/: nftables.rs
letmeind/tests/: test_auth_rate_limiter.rs
letmeinfwd/: Cargo.toml  build.rs  letmeinfwd.service  letmeinfwd.socket
letmeinfwd/src/: firewall.rs  main.rs  seccomp.rs  server.rs  uid_gid.rs  verify.rs
letmeinfwd/src/firewall/: nftables.rs
maintenance/: makerelease-all.sh  makerelease-letmein-conf.sh  makerelease-letmein-proto.sh  makerelease-letmein-systemd.sh  makerelease-letmein.sh  makerelease-letmeind.sh  makerelease.sh
scripts/: lib.sh  makerelease.sh
test/: server.sh
tests/: run-tests.sh  setup-nftables.sh
tests/conf/: tcp.conf  udp.conf
tests/stubs/: nft.rs
tests/stubs/nft/: Cargo.toml
