# -*- coding: utf-8 -*-

[workspace]
members = [
    "letmein",
    "letmein-conf",
    "letmein-fwproto",
    "letmein-proto",
    "letmein-seccomp",
    "letmein-systemd",
    "letmeind",
    "letmeinfwd",
    "tests/stubs/nft",
]
resolver = "2"

[workspace.package]
version = "12.0.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
homepage = "https://bues.ch/h/letmein"
repository = "https://github.com/mbuesch/letmein"
readme = "README.md"
categories = [ "authentication", "network-programming", "command-line-utilities", "cryptography" ]
keywords = [ "port-knocking", "port", "knock", "firewall", "nftables" ]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [ "std", "help", "usage", "error-context", "derive" ] }
getrandom = "0.3"
hickory-resolver = "0.25"
hmac = "0.12"
libc = "0.2"
nftables = "0.6"
nix = { version = "0.30", default-features = false }
sd-notify = "0.4"
seccompiler = "0.5"
sha3 = "0.10"
subtle = "2"
tokio = "1"

letmein-conf = { version = "12", path = "./letmein-conf" }
letmein-fwproto = { version = "12", path = "./letmein-fwproto" }
letmein-proto = { version = "12", path = "./letmein-proto" }
letmein-seccomp = { version = "12", path = "./letmein-seccomp" }
letmein-systemd = { version = "12", path = "./letmein-systemd" }

[workspace.lints.clippy]
cargo = "warn"
multiple-crate-versions = { level = "allow", priority = 1 }
undocumented_unsafe_blocks = "warn"

[profile.dev]
debug = "limited"
panic = "abort"

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = true
codegen-units = 1

# vim: ts=4 sw=4 expandtab
