# -*- coding: utf-8 -*-

[package]
name = "letmein-android"
description = "Authenticated port knocking - Android bindings"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
jni = { workspace = true }
letmein-proto = { workspace = true }

# vim: ts=4 sw=4 expandtab
