# -*- coding: utf-8 -*-

[package]
name = "letmein-conf"
description = "Authenticated port knocking - Configuration parser"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
homepage = "https://bues.ch/h/letmein"
repository = "https://github.com/mbuesch/letmein"
readme = "README.md"
categories = [ "authentication", "network-programming", "command-line-utilities", "cryptography" ]
keywords = [ "port-knocking", "port", "knock", "firewall", "nftables" ]

[dependencies]
anyhow = "1"
configparser = "3"
letmein-proto = "1"

# vim: ts=4 sw=4 expandtab
