# -*- coding: utf-8 -*-

[package]
name = "letmein-conf"
description = "Authenticated port knocking - Configuration parser"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
configparser = { workspace = true }
letmein-proto = { workspace = true }

# vim: ts=4 sw=4 expandtab
