# -*- coding: utf-8 -*-

[package]
name = "letmein-conf"
description = "Authenticated port knocking - Configuration parser"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
letmein-proto = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }

# vim: ts=4 sw=4 expandtab
