# -*- coding: utf-8 -*-

[package]
name = "letmein-proto"
description = "Authenticated port knocking - Wire protocol"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
homepage = "https://bues.ch/h/letmein"
repository = "https://github.com/mbuesch/letmein"
readme = "README.md"
categories = [ "authentication", "network-programming", "command-line-utilities", "cryptography" ]
keywords = [ "port-knocking", "port", "knock", "firewall", "nftables" ]

[dependencies]
anyhow = "1"
bincode = "1"
getrandom = "0.2"
hmac = "0.12"
serde = { version = "1", features = [ "derive" ] }
sha3 = "0.10"
subtle = "2"

# vim: ts=4 sw=4 expandtab
