# -*- coding: utf-8 -*-

[package]
name = "letmein-proto"
description = "Authenticated port knocking - Wire protocol"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
sha3 = { workspace = true }
subtle = { workspace = true }

# vim: ts=4 sw=4 expandtab
