# -*- coding: utf-8 -*-

[package]
name = "letmein-proto"
description = "Authenticated port knocking - Wire protocol"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true, features = [ "net", "sync", "macros", "time" ] }

[lints]
workspace = true

# vim: ts=4 sw=4 expandtab
