# -*- coding: utf-8 -*-

[package]
name = "letmein-seccomp"
description = "Authenticated port knocking - Seccomp wrapper"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }

[build-dependencies]
build-target = { workspace = true }

# vim: ts=4 sw=4 expandtab
