# -*- coding: utf-8 -*-

[package]
name = "letmein-systemd"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
publish = false

[dependencies]
anyhow = "1"
sd-notify = { git = "https://github.com/lnicola/sd-notify.git", rev = "5f9cbef17f33549c60d322342dead37fe11f18a7" }

# vim: ts=4 sw=4 expandtab
