# -*- coding: utf-8 -*-

[package]
name = "letmein-systemd"
description = "Authenticated port knocking - Systemd support"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Michael Büsch <m@bues.ch>" ]
homepage = "https://bues.ch/h/letmein"
repository = "https://github.com/mbuesch/letmein"
readme = "README.md"
categories = [ "authentication", "network-programming", "command-line-utilities", "cryptography" ]
keywords = [ "port-knocking", "port", "knock", "firewall", "nftables" ]

[dependencies]
anyhow = "1"
sd-notify = { git = "https://github.com/lnicola/sd-notify.git", rev = "5f9cbef17f33549c60d322342dead37fe11f18a7" }

# vim: ts=4 sw=4 expandtab
