# -*- coding: utf-8 -*-

[package]
name = "letmein-systemd"
description = "Authenticated port knocking - Systemd support"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
categories = { workspace = true }
keywords = { workspace = true }

[features]
default = []
tcp = []

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
sd-notify = { workspace = true }

# vim: ts=4 sw=4 expandtab
