# -*- coding: utf-8 -*-

[package]
name = "letmein"
description = "Authenticated port knocking - Client"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
letmein-conf = { workspace = true }
letmein-proto = { workspace = true }
tokio = { workspace = true, features = [ "rt", "net", "macros", ] }

# vim: ts=4 sw=4 expandtab
