# -*- coding: utf-8 -*-

[package]
name = "letmein"
description = "Authenticated port knocking - Client"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
letmein-conf = { workspace = true }
letmein-proto = { workspace = true }
tokio = { workspace = true, features = [ "rt", "net", "macros", ] }

[build-dependencies]
build-target = { workspace = true }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
letmein-seccomp = { workspace = true, features = [ "de", "install" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.build-dependencies]
letmein-seccomp = { workspace = true, features = [ "compile", "ser" ] }

# vim: ts=4 sw=4 expandtab
