# -*- coding: utf-8 -*-

[package]
name = "letmein"
description = "Authenticated port knocking - Client"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hickory-resolver = { workspace = true, features = [ "system-config", "tokio", "tls-ring", "https-ring", "quic-ring", "webpki-roots", "dnssec-ring" ] }
letmein-conf = { workspace = true }
letmein-proto = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = [ "rt", "net", "macros", "time", ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
letmein-seccomp = { workspace = true }

[lints]
workspace = true

# vim: ts=4 sw=4 expandtab
