# -*- coding: utf-8 -*-

[package]
name = "letmeind"
description = "Authenticated port knocking - Server"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
letmein-conf = { workspace = true }
letmein-proto = { workspace = true }
letmein-systemd = { workspace = true }
nftables = { workspace = true }
tokio = { workspace = true, features = [ "rt", "net", "macros", "signal", "sync", "time" ] }

# vim: ts=4 sw=4 expandtab
