# -*- coding: utf-8 -*-

[package]
name = "letmeind"
description = "Authenticated port knocking - Server"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
letmein-conf = { workspace = true }
letmein-fwproto = { workspace = true }
letmein-proto = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = [ "rt", "net", "macros", "signal", "sync", "time" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
letmein-seccomp = { workspace = true }
letmein-systemd = { workspace = true, features = [ "udp", "tcp" ] }

[lints]
workspace = true

# vim: ts=4 sw=4 expandtab
