# -*- coding: utf-8 -*-

[package]
name = "letmeinfwd"
description = "Authenticated port knocking - Firewall backend daemon"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
letmein-conf = { workspace = true }
letmein-fwproto = { workspace = true }
letmein-systemd = { workspace = true, features = [ "unix" ] }
libc = { workspace = true }
nftables = { workspace = true }
tokio = { workspace = true, features = [ "rt", "net", "macros", "signal", "sync", "time" ] }
user_lookup = { workspace = true, features = [ "sync" ] }

# vim: ts=4 sw=4 expandtab
