# -*- coding: utf-8 -*-

[package]
name = "letmeinfwd"
description = "Authenticated port knocking - Firewall backend daemon"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
letmein-conf = { workspace = true }
letmein-fwproto = { workspace = true }
letmein-proto = { workspace = true }
libc = { workspace = true }
nftables = { workspace = true, features = [ "tokio" ] }
nix = { workspace = true, features = [ "user" ] }
tokio = { workspace = true, features = [ "rt", "net", "macros", "signal", "sync", "time" ] }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
letmein-seccomp = { workspace = true }
letmein-systemd = { workspace = true, features = [ "unix" ] }

# vim: ts=4 sw=4 expandtab
